tests/snapshots/codegen_snapshot_tests__issue880_map_err_string_literal_closure.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 4102
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub use crate::__incan_std::json::JsonValue;
fn parse(source: String) -> Result<JsonValue, String> {
    return JsonValue::parse(source).map_err(|_error| "malformed_json".to_string());
}
fn parse_formatted(source: String) -> Result<JsonValue, String> {
    return JsonValue::parse(source)
        .map_err(|_error| {
            let __parts: [&str; 1usize] = ["malformed_json"];
            let __args: Vec<String> = vec![];
            incan_stdlib::strings::fstring(&__parts, &__args)
        });
}
fn preserve_error<T: Clone>(value: T) -> Result<i64, T> {
    return Err::<i64, T>(value).map_err(|_error| value.clone());
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _formatted = parse_formatted("{".to_string());
    let _preserved = preserve_error("original".to_string());
    let _ = match parse("{".to_string()) {
        Ok(_) => println!("{}", "unexpected"),
        Err(error) => println!("{}", error),
    };
}
fn main() {
    main();
}
