tests/snapshots/codegen_snapshot_tests__issue951_set_shadowing.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 2497
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn set(values: Vec<String>) -> i64 {
    let _ = "Return the input cardinality without invoking the collection constructor.";
    return ::std::convert::identity(values.len() as i64);
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = "Call the source-defined set function through generated Rust.";
    let _ = println!(
        "{}", set(vec!["alpha".to_string(), "beta".to_string(), "beta".to_string()])
    );
}
fn main() {
    main();
}
