tests/snapshots/codegen_snapshot_tests__issue964_imported_private_source_model_constructor.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 3692
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use crate::public_api::ExportedVault as PublicVault;
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let vault = PublicVault("visible".to_string());
    let _ = println!("{}", vault.label);
}
fn main() {
    main();
}
