tests/snapshots/codegen_snapshot_tests__issue969_storable_sha256_hasher.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 2490
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub use crate::__incan_std::hash::Sha256Hasher;
pub use crate::__incan_std::hash::sha256;
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct StructuralSink {
    hasher: Sha256Hasher,
}
impl incan_stdlib::reflection::HasClassName for StructuralSink {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for StructuralSink {
    fn __class_name__() -> &'static str {
        "StructuralSink"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for StructuralSink {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for StructuralSink {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 1] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("hasher"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("hasher"),
                type_name: incan_stdlib::frozen::FrozenStr::new("Sha256Hasher"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl StructuralSink {
    pub fn append(&mut self, chunk: Vec<u8>) {
        let _ = self.hasher.update(chunk);
    }
    pub fn finalize(&mut self) -> Vec<u8> {
        return self.hasher.finalize_bytes();
    }
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let mut sink = StructuralSink {
        hasher: sha256::new(),
    };
    let _ = sink.append(b"a".to_vec());
    let _ = sink.append(b"bc".to_vec());
    let _ = println!("{}", sink.finalize() == sha256::digest(b"abc".to_vec()));
}
fn main() {
    main();
}
