tests/snapshots/codegen_snapshot_tests__list_clone_model.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 3481
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[derive(Clone, Debug, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Node {
    id: i64,
}
impl incan_stdlib::reflection::HasClassName for Node {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for Node {
    fn __class_name__() -> &'static str {
        "Node"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for Node {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for Node {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 1] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("id"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("id"),
                type_name: incan_stdlib::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for Node {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "id" => Some(format!("{}", self.id)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![("id".to_string(), format!("{}", self.id))]
    }
}
fn clone_nodes(nodes: Vec<Node>) -> Vec<Node> {
    let copy = nodes.clone();
    return copy;
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let nodes = vec![Node { id : 1 }, Node { id : 2 }];
    let copy = clone_nodes(nodes);
    let _ = println!("{}", ::std::convert::identity(copy.len() as i64));
}
fn main() {
    main();
}
